# texed

./: .clang-format  .clangd  .gitignore  README.md  config.hpp  meson.build
inc/: app_data.hpp  arg_parse.hpp  command.hpp  cursor.hpp  decoration.hpp  editor.hpp  file_handler.hpp  input_handler.hpp  movement.hpp  utils.hpp
src/: arg_parse.cpp  cursor.cpp  decoration.cpp  editor.cpp  file_handler.cpp  input_handler.cpp  log_utils.cpp  main.cpp  movement.cpp  utils.cpp
